# 2025-HAI-BootCamp

./: .gitignore  ChangjunKim.txt  Gwon_Taegyeong.txt  KDY.txt  README.md  introduce  introduce.txt  jslee938.txt  me.txt  pyproject.toml  sominpark.txt  김보민.txt
Lec1_Introduce/team1/: introduce.txt  sominpark.txt
Lec1_Introduce/team2/: car.py
Lec1_Introduce/team3/: car.py
lec1/team1/: Car.py
lec1/team2/: ChangjunKim.txt  car.py
lec1/team3/: KimJungha.txt  introduce_minju.txt
yolo/: README.md  loss.py  model.py  train.py  utils.py
yolo/data/: generate_csv.py  val_80examples.csv  val_8examples.csv
