[tool.poetry]
name = "extract_cough"
version = "0.1.0"
package-mode = false
description = ""
authors = ["rogerkimjazzlover <minseungkim1017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.47.1"
torch = "2.2.2"
torchvision = "0.17.2"
llvmlite = "^0.43.0"
matplotlib = "^3.10.0"
numpy = "^1.26,<2.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
